added redis cache
