# FMicroservice/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:12345",
     "basePath": "/",
     "paths": {
-        "/admin/LastTen": {
+        "/admin/userByLogin": {
             "get": {
                 "security": [
                     {
@@ -32,21 +32,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users",
                     "admin"
                 ],
-                "summary": "last ten users",
+                "summary": "getting user by login",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "login",
+                        "name": "login",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/model.User"
-                                }
-                            }
+                            "$ref": "#/definitions/handler.GetByLoginResponse"
                         }
                     },
                     "403": {
@@ -230,6 +232,63 @@
         }
     },
     "definitions": {
+        "handler.GetByLoginResponse": {
+            "type": "object",
+            "required": [
+                "age",
+                "email",
+                "login",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 0
+                },
+                "created": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2021-05-25T00:53:16.535668Z"
+                },
+                "deleted": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "email": {
+                    "type": "string",
+                    "format": "email"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 5
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 25,
+                    "minLength": 2
+                },
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "updated": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2021-05-25T00:53:16.535668Z"
+                }
+            }
+        },
         "handler.SignupResponse": {
             "type": "object",
             "required": [
